2009-12-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #12926: RTE floods BE Log with error messages from json_encode()

2009-12-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #12930: htmlArea: Resizable RTE area
	* Added feature #12943: htmlArea RTE: Configuring custom items in the block formatting drop-down list
	* Fixed bug #12926: RTE floods BE Log with error messages from json_encode()

2009-12-02  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12899: Wrong usage of CDATA raise javascript error
	* Fixed bug #12863: t3lib_cs::convArray converts integers to string

2009-12-02  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12852: Missing labels for CType header in New Content Wizard (Thanks to Uschi Renziehausen)
	* Fixed bug #12847: 4.3.0 install tool incorrectly reports memory limit problem

2009-11-30  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12843: Mulitple tests of the t3lib_PageRenderer_testcase fail
	* Fixed bug #12541: Unescaped & in urls of list module

2009-11-30  Oliver Hader  <oliver@typo3.org>

	* Branching TYPO3 4.3.0 to TYPO3_4-3

2009-11-30  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Updated ext_emconf.php files in system extensions

2009-11-29  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #9683: Store OpenID information in database	instead of using the filesystem

2009-11-29  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12836: Recycler: Still one error with labels in JavaScript
	* Fixed bug #12839: TS property pageRenderTemplateFile needs to be renamed
	* Fixed bug #12827: Core labels need to be utf-8 before json_encode
	* Fixed bug #12828: change language .js for ExtJS according to BE language (thanks to Stefano Cecere)

2009-11-29  Francois Suter  <francois@typo3.org>

	* Fixed bug #12727: Wrong htmlspecialchars() usage in Extension Manager (thanks to Andreas Kundoch)
	* Fixed bug #12498: t3lib_div::flushOutputBuffers() can't work (thanks to Steffen Gebert)